# University-db

./: .gitignore  CMakeLists.txt  address.cpp  address.hpp  data-generator.cpp  data-generator.hpp  employee.cpp  employee.hpp  female-surnames.txt  firstNames.txt  info.txt  lastNames.txt  main.cpp  male-surnames.txt  menu.cpp  menu.hpp  person.cpp  person.hpp  postalCodes.txt  streets.txt  student.cpp  student.hpp  todo.txt  university.cpp  university.hpp
random-data/: female-names.txt  male-names.txt
src/: address.hpp  data-generator.cpp  data-generator.hpp  employee.cpp  main-ut.cpp  main.cpp  menu.cpp  person.cpp  person.hpp  student.cpp  student.hpp  university.cpp  university.hpp
tests/: CMakeLists.txt
tests/AddressTest/: CMakeLists.txt  address-ut.cpp
tests/DataGeneratorTest/: CMakeLists.txt  data-generator-ut.cpp
tests/EmployeeTest/: CMakeLists.txt  employee-ut.cpp
tests/PersonTests/: CMakeLists.txt  person-ut.cpp
tests/StudentTest/: CMakeLists.txt  student-ut.cpp
tests/UniversityTest/: CMakeLists.txt  university-ut.cpp
